--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -65,8 +65,11 @@
         &__1{
             animation-delay: 0.4s;
             z-index: 2;
-            left: 9vw;
+            left: 7vw;
             top:5vw;
+            transform: translateY(-400px);
+            transition: 0.6s all;
+            opacity: 0;
             .who__box__description{
                 color: #000000;
             }
@@ -74,8 +77,11 @@
         &__2{
             animation-delay: 2.5s;
             z-index: 1;
-            top: 20vw;
-            left: 27vw;
+            top: 16vw;
+            transform: translateY(100px);
+            transition: 0.6s all;
+            opacity: 0;
+            left: 26vw;
             .who__box__description{
                 color: #2952ab;
             }
@@ -83,7 +89,10 @@
         &__3{
             animation-delay: 0.9s;
             z-index: 2;
-            top: 10vw;
+            top: 8vw;
+            transform: translateY(-400px);
+            transition: 0.6s all;
+            opacity: 0;
             left: 45vw;
             .who__box__description{
                 color: #c3136a;
@@ -94,6 +103,10 @@
             font-size: 28px;
             line-height: 40px;
             padding-top: 30px;
+        }
+        &--animation{
+            transform: translateY(0px);
+            opacity: 1;
         }
     }
 }
@@ -169,12 +182,12 @@
 }
 
 
-@keyframes topBottom {
-    from {
-        transform: translate(0, -30px);
-    }
+// @keyframes topBottom {
+//     from {
+//         transform: translate(0, -30px);
+//     }
 
-    to {
-        transform: translate(0, 10px);
-    }
-}
+//     to {
+//         transform: translate(0, 10px);
+//     }
+// }
